<resources>
    <string name="app_name">CanIBuyIt???</string>
    <string name="mainTitle">FireBaseCrud</string>
    <string name="nameTitle">Enter Name</string>
    <string name="nameEnter"></string>
    <string name="priceTitle">Enter Price</string>
    <string name="priceEnter"></string>
    <string name="enterAvailable" />
    <string name="floatbutton">floatbutton</string>
    <string name="userlogintext">Login Page</string>
    <string name="AdminUserNameInput">Enter User Name</string>
<string name="loginUserNameInput">Enter User Name :</string>
<string name="loginUserPasswordInput">Enter Password :</string>
<string name="userLoginButton">Login</string>
<string name="doYouWantToSignUp">Do You Want To Sign Up Into The New Account?</string>
<string name="userForgotPassword">Forgot Password ?</string>
<string name="UserRegisterText">Register</string>
<string name="RegisterUserNameInput">Enter User Name :</string>
<string name="RegisterEmailInput">Enter Email :</string>
<string name="RegisterPhoneNumberInput">Enter Phone Number :</string>
<string name="RegisterAddressInput">Enter Address :</string>
<string name="RegisterPasswordInput">Enter Password :</string>
<string name="RegisterReEnter_PasswordInput">Re-Enter Password :</string>
<string name="UserRegisterButton">Register To The Account</string>
<string name="alreadyHaveAccountText">Already Have An Account?</string>
<string name="userHomeView">userHome</string>
<string name="userHomePageLayout1">userhomepagelayout1</string>
<string name="userWelcomeHomeText">Welcome to the home page !!!</string>
<string name="userHomePageCardView1layout1">userhomepagecardview1layout1</string>
<string name="userHomeShopText">Shops</string>
<string name="userHomeItemText">Items</string>
<string name="userHomePageCardView1layout2">userhomepagecardview1layout2</string>
<string name="userHomeFeedbackText">Feedbacks</string>
<string name="userHomeViewShopButton">View Shops</string>
<string name="userHomeCalculateBudgetButton">Calculate Budget</string>
<string name="userItemPageIcons">useritempageicons</string>
<string name="searchForItemsBar">Search For Items........</string>
<string name="EnterBudgetInput">Enter the budget you have...</string>
<string name="itemsCardViewLayout1">itemscardviewlayout1</string>
<string name="firstItemName">Item Name : Dhal</string>
<string name="firstItemPrice">Item Price : $21</string>
<string name="firstItemAvailabilityButton">Available</string>
<string name="secondItemPrice">Item Price : $21</string>
<string name="secondItemAvailabilityButton">Unavailable</string>
<string name="userProfileLayout">userprofilelayout</string>
<string name="userProfileIconsBar">userprofileiconsbar</string>
<string name="updateUserImageButton">Change the profile photo</string>
<string name="userProfileUserNameInput">Change User Name :</string>
<string name="userProfileEmailInput">Change the Email :</string>
<string name="userProfileAddressInput">Change the Address :</string>
<string name="userProfilePhoneNumberInput">Change the Phone Number :</string>
<string name="updateProfileButton">Update the profile</string>
<string name="backToHomePage">Back To Home Page</string>
<string name="forgetPasswordView">forgetpasswordview</string>
<string name="forgetPasswordText">Forgot password</string>
<string name="ForgotPasswordEmailInput">Enter the Email :</string>
<string name="forgetPasswordButton">Send the Mail</string>
<string name="checkTheMailBoxText">Please check the mail box and click the link and comeback to the login page !!! Thank You</string>
<string name="icon_group">icongroup</string>
<string name="budgetManagementText">Budget Management</string>
<string name="totalBalanceText">Total Balance</string>
<string name="totalBalanceValue">-$200</string>
<string name="transactionText">Transactions</string>
<string name="budgetManagementCardViewLayout1">budgetmanagementcardviewlayout1</string>
<string name="expenseText">Expense</string>
<string name="budgetValue">$200</string>
<string name="budgetText">Budget</string>
<string name="overallExpenses">$400</string>
<string name="overallExpenseText">Expense</string>
<string name="expenseValue">$100</string>
<string name="budgetManagementCardView2Layout1">budgetManagementCardView2Layout1</string>
<string name="incomeText">Income</string>
<string name="incomeValue">$100</string>
<string name="addTransactionText">Add Transaction</string>
<string name="labelInput">Lable :</string>
<string name="amountInput">Amount :</string>
<string name="descriptionInput">Description :</string>
<string name="addTransactionButton">Add Transaction</string>
<string name="updateOrDeleteTransactionText">Update or Delete Transaction</string>
<string name="labelUpdateInput">Update Label :</string>
<string name="updateAmount">Update Amount :</string>
<string name="updateDescription">Update Description :</string>
<string name="updateTransactionButton">Update Transaction</string>
<string name="deleteTransactionButton">Delete Transaction</string>
<string name="adminLoginView">adminLoginView</string>
<string name="AdminLoginText">Admin Login</string>
<string name="adminPasswordInput">Enter Password :</string>
<string name="adminLoginButton">Admin Login</string>
<string name="adminSignUpNewText">Do You Want To Sign Up Into The New Account?</string>
<string name="adminForgotPassword">Forgot Password ?</string>
<string name="adminRegisterView">adminRegisterView</string>
<string name="adminRegisterText">Admin Registration</string>
<string name="AdminRegisterUserNameInput">Enter User Name :</string>
<string name="adminRegisterEmailInput">Enter Email :</string>
<string name="adminRegisterPasswordLayout">Enter Password :</string>
<string name="adminRegisterReEnterPasswordInput">Re-Enter Password :</string>
<string name="adminRegisterButton">Register To The Account</string>
<string name="adminAlreadyHaveAnAccountText">Already Have An Account?</string>
<string name="AdminDashboardView">AdminDashboardView</string>
<string name="adminDashboardText">Admin Dashboard</string>
<string name="adminDashboardCardView1Layout1">adminDashboardCardView1Layout1</string>
<string name="totalUsersValue">140</string>
<string name="totalUsersText">Total Users</string>
<string name="totalShopsValue">10</string>
<string name="totalShopsText">Total Shops</string>
<string name="adminDashboardCardView2Layout1">adminDashboardCardView2Layout1</string>
<string name="totalItemsValue">200</string>
<string name="totalItemsText">Total Items</string>
<string name="totalFeedbacksValue">10</string>
<string name="totalFeedbacksText">Total Feedbacks</string>
<string name="viewAllShopsButton">View All Shops</string>
<string name="viewAllUsersButton">View All Users</string>
<string name="itemListText">Item List</string>
<string name="adminItemListCardView1Layout1">adminItemListCardView1Layout1</string>
<string name="firstItemNameadminSide"> Item Name : Dhal </string>
<string name="firstItemValue">Item Price : $21</string>
<string name="firstItemAvailabilityChange">available</string>
<string name="secondItemName">Item Name : Dhal</string>
<string name="secondItemPriceAdminSide">Item Price : $21</string>
<string name="secondItemAvailabilityCheck">unavailable</string>
<string name="adminSideUserProfileView">adminSideUserProfileView</string>
<string name="adminSideUserProfileText">View User Profile</string>
<string name="updateUserImageButtonAdminSide">View The Profile Photo</string>
<string name="viewProfileUserNameInput">View User Name :</string>
<string name="ViewUserProfileEmailInput">View User Email :</string>
<string name="viewUserProfileAddressInput">View User Address :</string>
<string name="viewUserProfilePhoneNumberInput">View User Phone Number :</string>
<string name="viewProfileDeleteButton">Delete the profile</string>
<string name="backToHomePageAdmin">Back To Admin Home Page</string>
<string name="adminUserListText">Users List</string>
<string name="adminUserListCartView1Layout1">adminUserListCartView1Layout1</string>
<string name="UsersUserName">User Name : Dewmi Silva </string>
<string name="usersUserEmail">Email : dew@gmail.com</string>
<string name="usersPhoneNumber">Phone Number : 009990000</string>
<string name="usersAddress">Address : Moratuwa</string>
<string name="userViewProfileButton">View Profile</string>
<string name="addItemAdminSideView">addItemAdminSideView</string>
<string name="addNewItemTitle">Add New Item </string>
<string name="updateItemImageButton">Upload Item Image</string>
<string name="itemNameInput">Item Name :</string>
<string name="itemPriceInput">Item Price :</string>
<string name="itemAvailabilityInput">Item Availabilty :</string>
<string name="addItemButton">Add new Item</string>
<string name="updateOrDeleteNewItemTitle">Update Or Delete Item</string>
<string name="chooseItemImageButton">Update Item Image </string>
<string name="itemNameInputUpdate">Update Item Name :</string>
<string name="itemPriceInputUpdate">Update Item Price :</string>
<string name="itemAvailabilityInputUpdate">Update Item Availability :</string>
<string name="updateItemButton">Update Item</string>
<string name="deleteItemButton">Delete Item</string>
<string name="backToHomePage2">Back To The Home Page</string>
<string name="searchForItemsBarUser">Search For Shops....</string>
<string name="shopName">Shop Name : Keels</string>
<string name="shopAddress">Address : Katubedda</string>
<string name="shopPhoneNumber">Phone Number :2233445566</string>
<string name="shopCity">City : Moratuwa</string>
<string name="shopDetailsLayout">shopDetailsLayout</string>
<string name="adminSideShopName">Shop Name : Keels</string>
<string name="adminSideShopAddress">Shop Address : Katubedda</string>
<string name="adminSideShopPhoneNumber">Phone Number : 2233445566</string>
<string name="adminSideCity">Shop City : Moratuwa</string>
<string name="viewItemsButton">View Items</string>
<string name="addNewShopTitle">Add new shop</string>
<string name="uploadShopImageButton">Upload Image</string>
<string name="shopNameInput">Shop Name :</string>
<string name="shopAddressInput">Shop Address :</string>
<string name="shopCityInput">Shop City :</string>
<string name="shopPhoneNumberInput">Shop Phone Number : </string>
<string name="addShopButton">Add shop</string>
<string name="updateOrDeleteShopTitle">Update Or Delete Shop</string>
<string name="chooseShopImageButton">update Image</string>
<string name="shopNameUpdateDeleteInput">Update Shop Name :</string>
<string name="shopAddressUpdateDeleteInput">Update Shop Address :</string>
<string name="shopCityUpdateDeleteInput">Update Shop City :</string>
<string name="shopPhoneNumberUpdateDeleteInput">Shop Phone Number :</string>
<string name="updateShopButton">Update Shop</string>
<string name="deleteShopButton">Delete Shop</string>
<string name="shopListText">Shops List</string>
<string name="feedBackUserView">feedBackUserView</string>
<string name="FeedbackText">Feedback</string>
<string name="feedbackInput">What Do You Feel?</string>
<string name="giveYourRatingsText">Give Your Ratings :</string>
<string name="feedbackSubmitButton">Submit</string>
<string name="shopFeedbacksText">Shop Feedbacks </string>
<string name="shopFeedbacksCardView1Layout1">shopFeedbacksCardView1Layout1</string>
<string name="userName">User Name : Stephan </string>
<string name="userComment">Comment : Best Service Ever!!!</string>
<string name="userRatingsText">Ratings :</string>
<string name="buttonsLayout">buttonsLayout</string>
<string name="userFeedbackAcceptButton">Accept</string>
<string name="userFeedbackDeclineButton">Decline</string>
<string name="UsersFeedbacks">User\'s Feedbacks</string>
<string name="usersFeedbackCardView1Layout1">usersFeedbackCardView1Layout1</string>
<string name="ShopName">Keels</string>
<string name="shopNameText">Shop Name</string>
<string name="commentText">Comment : The Best Service !!</string>
<string name="ratingsText">Ratings : *****</string>
</resources>