<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/adminUserListCartView1Layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="@string/adminUserListCartView1Layout1">

            <ImageView
                android:id="@+id/userProfileIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="0.5"
                android:src="@drawable/baseline_userprofileimage"
                app:layout_constraintStart_toStartOf="parent" />


            <LinearLayout
                android:id="@+id/userDetailsLayout1"
                android:layout_width="244dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/UsersUserName"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usersUserEmail"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/usersPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usersPhoneNumber"
                    android:textColor="@color/darkGreen"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/usersAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usersAddress"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/userDeleteButton"
            android:layout_marginTop="120dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_delete_24"
            android:layout_marginStart="110dp"/>

        <ImageView
            android:id="@+id/userFeedbacksViewButton"
            android:layout_marginTop="120dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_feedback_24"
            android:layout_marginStart="140dp"/>

        <Button
            android:id="@+id/userViewProfileButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:text="@string/userViewProfileButton"
            android:textStyle="bold"
            />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="16dp">-->

<!--        <TextView-->
<!--            android:id="@+id/tvUserName"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="16sp"-->
<!--            android:textStyle="bold" />-->

<!--        <TextView-->
<!--            android:id="@+id/tvUserEmail"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="14sp" />-->

<!--        &lt;!&ndash; Add more views for other user details here &ndash;&gt;-->

<!--    </LinearLayout>-->

</com.google.android.material.card.MaterialCardView>
