<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHome">

    <View
        android:id="@+id/AdminDashboardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundvector"
        tools:ignore="@string/AdminDashboardView,MissingConstraints" />

    <LinearLayout
        android:id="@+id/AdminDashboardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505">



        <LinearLayout
            android:id="@+id/AdminDashboardLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userHomeLogoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="350dp"
                android:src="@drawable/baseline_logout_24" />
            <ImageView
                android:id="@+id/userProfileIcon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/baseline_account_circle_24"
                />

            <TextView

                android:id="@+id/adminDashboardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adminDashboardText"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/adminDashboardCardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/adminDashboardText"
                android:backgroundTint="@color/lightblue"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:id="@+id/adminDashboardCardView1Layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:ignore="@string/adminDashboardCardView1Layout1">

                    <LinearLayout
                        android:id="@+id/usersLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/userProfileIcon1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/baseline_account_circle_24" />

                        <TextView
                            android:id="@+id/totalUsersValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalUsersValue"
                            android:textColor="@color/darkGreen"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/totalUsersText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalUsersText"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText"


                            />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/shopsLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/shopIcon"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/baseline_shopimage" />

                        <TextView
                            android:id="@+id/totalShopsValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalShopsValue"
                            android:textColor="@color/red"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/totalShopsText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalShopsText"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@id/shopsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightblue"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:id="@+id/adminDashboardCardView2Layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:ignore="@string/adminDashboardCardView2Layout1">

                    <LinearLayout
                        android:id="@+id/itemsLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/itemIcon"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/baseline_itemicon" />

                        <TextView
                            android:id="@+id/totalItemsValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalItemsValue"
                            android:textColor="@color/darkGreen"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/totalItemsText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalItemsText"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText"

                            />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/totalFeedbackLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/feedbackIcon"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/baseline_feedbackhomepag" />

                        <TextView
                            android:id="@+id/totalFeedbacksValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalFeedbacksValue"
                            android:textColor="@color/red"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/totalFeedbacksText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalFeedbacksText"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/viewAllShopsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/viewAllShopsButton"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewAllUsersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/viewAllUsersButton"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>