<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity">

    <View
        android:id="@+id/feedBackUserView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundvector14"
        tools:ignore="@string/feedBackUserView" />

    <include layout="@layout/maintoolbar"/>

    <LinearLayout
        android:id="@+id/FeedbackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555">

        <TextView
            android:id="@+id/FeedbackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FeedbackText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feelLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedbackInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/lightblue"
                android:drawableStart="@drawable/baseline_feedbackcomment"
                android:drawablePadding="12dp"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/feedbackInput"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RatingBarLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:errorEnabled="true">

            <TextView
                android:id="@+id/giveYourRatingsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:text="@string/giveYourRatingsText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />


            <RatingBar
                android:id="@+id/rattingBarInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/feedbackSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/green"
            android:text="@string/feedbackSubmitButton"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>